<resources>
    <string name="app_name">Мой Тобольск</string>
    <string name="your_tobolsk">Твой Тобольск</string>
    <string name="events">Мероприятия</string>
    <string name="routes">Маршруты</string>
    <string name="interests_places">Интересные места</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="useful">Полезное</string>
    <string name="for_you">Для тебя</string>
    <string name="account">Аккаунт</string>
    <string name="notification">Уведомления</string>
    <string name="where">Где: %s</string>
    <string name="when">Когда: %s, %s</string>
    <string name="show_all">Показать все</string>
    <string name="sign_in">Войти</string>
    <string name="share">Поделиться</string>
    <string name="sign_up">Регистрация</string>
    <string name="dont_have_account">Ещё нет аккаунта?</string>
    <string name="have_account">Уже есть аккаунт?</string>
</resources>