<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        tools:visibility="gone"
        android:id="@+id/progress_circular_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/heading_useful"
        android:text="@string/useful"
        style="@style/heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view__stories"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/heading_events"
        android:text="@string/events"
        style="@style/heading" />

    <TextView
        android:id="@+id/heading_routes"
        android:text="@string/routes"
        style="@style/heading" />

    <TextView
        android:id="@+id/heading_places"
        android:text="@string/interests_places"
        style="@style/heading" />

</LinearLayout>